fix title screen alignment

--- a/src/components/PageComponents/Home/LoginScreen/style.module.scss
+++ b/src/components/PageComponents/Home/LoginScreen/style.module.scss
@@ -7,7 +7,7 @@
     font-size: 2rem;
     > h1 {
       line-height: 1;
-      margin-inline: 0;
+      margin-left: -0.35rem;
       margin-block: $spacing / 2;
       font-size: 4.5rem;
     }
